last modifiedが見つからないときに変更を見れるようにした
力技でやった

--- a/config/config_default.json
+++ b/config/config_default.json
@@ -1,8 +1,8 @@
 {
-    "urls": [
-
-    ],
+    "urls": {
+        "title": "https://example.com"
+    },
     "webhooks": [
-        
+        "https://example.com"
     ]
 }
